# Os_labs

Lab3/: CMakeLists.txt  Config.conf  main.cpp  opt_node.h  opt_set.h  test.h
Lab_1/: build.sh  config.txt  daemon.cpp  daemon.h  daemon_executable  starter.cpp
Lab_2/: CMakeLists.txt  message.h  message_queue.h
Lab_2/Client/: _client.cpp  client.cpp  client.h
Lab_2/Connections/: conn_fifo.cpp  conn_fifo.h  connection.h
Lab_2/Host/: _host.cpp  host.cpp  host.h
